2007-05-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxt_sigint_restore): properly pass a
	pointer to signal()

2007-05-19  Ethan Merritt  <merritt@u.washington.edu>

	* demo/fillcrvs.dem:  Add world map as demo of closed filled curves
	from a file.

	* src/set.c (set_decimal): Follow POSIX standard with regard to finding
	the value of LC_NUMERIC from the environment. Use the first match to
	LC_ALL, LC_NUMERIC, or LANG.
	Bug #1692541

2007-05-18  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Cleanup the way wxExitLoop events are sent on exit.

2007-05-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (GraphClose) src/wxterminal/wxt_gui.cpp (OnClose):
	Pass window close event through to event_reset(). x11 already did this.

	* src/mouse.c (event_reset): Dummy up a keystroke event containing a
	synthetic keystroke GP_Cancel.  Pass this through to event_keypress()
	so that it will check for a user-specified binding to the window close
	event.

	* src/mouse.h src/mousecmn.h: Define the synthetic keystroke GP_Cancel.

	* docs/gnuplot.doc: Document that you can now bind a window close
	event just as you would a real key:    bind Close 'print "\n\nAyiii!\n"'

2007-05-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data) src/graphics.c (plot_lines):
	Allow 2D plots "with lines lc rgb variable".  This capability already
	exists for points, dots, labels, impulses.
	Bug #1720032

2007-05-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/plot.c (main): Properly reset Readline when we come back from
	the SIGINT handler calling longjmp. This avoids having the line
	edition all broken in that precise situation (arrow keys will work
	instead of giving '^[[A' for example)

2007-05-16  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (image creation): Adjust image line pad according to
	image data width in XCreateImage().  Bug #1716389.
